--- a/EDA_algoTesting.ipynb
+++ b/EDA_algoTesting.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "4  11.684  193.45  16.455  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,16 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x24f61ca0248>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x24f02b804c8>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "max     204.570000    23.649000  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,16 +474,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x24f6aed1d48>"
+       "<seaborn.axisgrid.PairGrid at 0x24f09c21d48>"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
        "Y  0.547301  0.501262  0.524228  0.581135  1.000000  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
        "max     204.570000    23.649000  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
        "Index(['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'Y'], dtype='object')"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
        "Name: Y, dtype: float64"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,20 +1060,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Seperating Independent variable and dependent variable\n",
-    "X= df[['a', \n",
-    "       'b', \n",
+    "X= df[['a',  \n",
     "       'c', \n",
-    "       'd',\n",
-    "       'e',        \n",
-    "       'f',\n",
     "       'g',\n",
-    "       'h',\n",
-    "       'i',\n",
     "       'j',\n",
     "       'k'\n",
     "      ]]\n",
@@ -1089,49 +1083,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 171,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             a         b         c         d         e         f         g  \\\n",
-      "0     0.601658  0.597629  0.416905  0.693437  0.696885  0.686964  0.721089   \n",
-      "1     0.594895  0.585325  0.325396  0.675880  0.682009  0.664731  0.703196   \n",
-      "2     0.596859  0.578819  0.324611  0.539288  0.545394  0.529094  0.562696   \n",
-      "3     0.613111  0.602654  0.324611  0.551172  0.556200  0.538791  0.572791   \n",
-      "4     0.817736  0.807511  0.204851  0.364377  0.356214  0.356182  0.367820   \n",
-      "...        ...       ...       ...       ...       ...       ...       ...   \n",
-      "3486  0.491492  0.499903  0.068128  0.457974  0.536322  0.522232  0.552949   \n",
-      "3487  0.525851  0.542614  0.072213  0.543294  0.609232  0.605093  0.631693   \n",
-      "3488  0.572535  0.586420  0.096470  0.606249  0.672737  0.660509  0.693309   \n",
-      "3489  0.573517  0.569220  0.096515  0.578143  0.646188  0.637221  0.666643   \n",
-      "3490  0.542976  0.547575  0.075797  0.477468  0.545127  0.530743  0.558867   \n",
-      "\n",
-      "             h         i         j         k  \n",
-      "0     0.704587  0.959481  0.894337  0.646794  \n",
-      "1     0.687683  0.959481  0.883938  0.626733  \n",
-      "2     0.546180  0.753694  0.891984  0.619069  \n",
-      "3     0.555858  0.788420  0.890238  0.623464  \n",
-      "4     0.358394  0.487457  0.886898  0.874676  \n",
-      "...        ...       ...       ...       ...  \n",
-      "3486  0.539841  0.604498  0.903750  0.503550  \n",
-      "3487  0.618976  0.725398  0.919007  0.538375  \n",
-      "3488  0.677868  0.797362  0.930317  0.600023  \n",
-      "3489  0.652239  0.774273  0.937073  0.596754  \n",
-      "3490  0.542635  0.610929  0.935251  0.541643  \n",
-      "\n",
-      "[3491 rows x 11 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "scaler = MinMaxScaler()\n",
+    "#scaler = MinMaxScaler()\n",
     " \n",
-    "X=pd.DataFrame(scaler.fit_transform(X),\n",
-    "            columns=X.columns, index=X.index) \n",
-    "print(X)"
+    "#X=pd.DataFrame(scaler.fit_transform(X),\n",
+    " #           columns=X.columns, index=X.index) \n",
+    "#print(X)"
    ]
   },
   {
@@ -1143,9 +1103,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 172,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           a        c       g        j       k\n",
+      "879   198.53   45.678  265.67  12.0190  175.79\n",
+      "339   184.10   30.441  205.11  11.1640  181.72\n",
+      "1160  209.40   50.805  247.37  11.6420  192.95\n",
+      "850   185.11   44.780  262.79  11.8030  166.77\n",
+      "2617  138.02   21.528  186.19   9.7332  127.75\n",
+      "...      ...      ...     ...      ...     ...\n",
+      "1166  210.10   47.357  237.98  11.7630  192.71\n",
+      "2995  187.67   23.661  229.30  11.9130  162.52\n",
+      "247   181.69   40.955  250.03  11.3240  168.31\n",
+      "2554  186.80  100.000  257.94  10.7550  179.36\n",
+      "403   135.10   30.566  175.13   9.7127  123.66\n",
+      "\n",
+      "[2792 rows x 5 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -1154,7 +1135,8 @@
     "#testing set 20%\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size= 0.20)\n",
-    "\n"
+    "\n",
+    "print(X_train)"
    ]
   },
   {
@@ -1169,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,14 +1173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root Mean squared error RMSE: 0.8116030298627162\n"
+      "Root Mean squared error RMSE: 0.7385124720199631\n"
      ]
     }
    ],
@@ -1210,14 +1192,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 SCORE ON TEST DATA: 0.6393138654307391\n"
+      "R2 SCORE ON TEST DATA: 0.6764940338993644\n"
      ]
     }
    ],
@@ -1229,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -1329,18 +1311,18 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   8 tasks      | elapsed:   10.7s\n",
-      "[Parallel(n_jobs=-1)]: Done  44 out of  50 | elapsed:  1.1min remaining:    9.0s\n",
-      "[Parallel(n_jobs=-1)]: Done  50 out of  50 | elapsed:  1.1min finished\n"
+      "[Parallel(n_jobs=-1)]: Done   8 tasks      | elapsed:   20.4s\n",
+      "[Parallel(n_jobs=-1)]: Done  44 out of  50 | elapsed:  1.1min remaining:    8.8s\n",
+      "[Parallel(n_jobs=-1)]: Done  50 out of  50 | elapsed:  1.2min finished\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[13:11:34] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[14:26:25] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
       "\n",
-      " Time taken: 0 hours 1 minutes and 24.39 seconds.\n"
+      " Time taken: 0 hours 1 minutes and 20.47 seconds.\n"
      ]
     }
    ],
@@ -1354,19 +1336,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "XGBRegressor(colsample_bytree=0.9745674995015196, gamma=3.4207328961642025,\n",
-       "             learning_rate=0.3170124333865799, max_depth=19,\n",
-       "             min_child_weight=58.94264284619957, n_estimators=5830, nthreads=-1,\n",
-       "             reg_alpha=10.681118694027179, subsample=0.8204065820776771)"
+       "XGBRegressor(colsample_bytree=0.9633935067154217, gamma=7.373293853043805,\n",
+       "             learning_rate=0.30347552235811115, max_depth=39,\n",
+       "             min_child_weight=23.66361761360701, n_estimators=5001, nthreads=-1,\n",
+       "             reg_alpha=5.472405778038726, subsample=0.9244311275371749)"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1377,27 +1359,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelXGB=xgboost.XGBRegressor(colsample_bytree=0.9745674995015196, gamma=3.4207328961642025,\n",
-    "             learning_rate=0.3170124333865799, max_depth=19,\n",
-    "             min_child_weight=58.94264284619957, n_estimators=5830, nthreads=-1,\n",
-    "             reg_alpha=10.681118694027179, subsample=0.8204065820776771)"
+    "modelXGB=xgboost.XGBRegressor(colsample_bytree=0.9633935067154217, gamma=7.373293853043805,\n",
+    "             learning_rate=0.30347552235811115, max_depth=39,\n",
+    "             min_child_weight=23.66361761360701, n_estimators=5001, nthreads=-1,\n",
+    "             reg_alpha=5.472405778038726, subsample=0.9244311275371749)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[13:12:27] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "R2 SCORE ON TEST DATA: 0.7671873101174758\n"
+      "[14:27:22] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "R2 SCORE ON TEST DATA: 0.8162699304381662\n"
      ]
     }
    ],
@@ -1415,14 +1397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 0.652052\n"
+      "RMSE: 0.556553\n"
      ]
     }
    ],
@@ -1434,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1465,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -1480,8 +1462,8 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  17 tasks      | elapsed:    5.5s\n",
-      "[Parallel(n_jobs=-1)]: Done  50 out of  50 | elapsed:   10.9s finished\n",
+      "[Parallel(n_jobs=-1)]: Done  17 tasks      | elapsed:    3.1s\n",
+      "[Parallel(n_jobs=-1)]: Done  50 out of  50 | elapsed:   11.0s finished\n",
       "C:\\Users\\A549773\\Anaconda3-new\\envs\\py37\\lib\\site-packages\\sklearn\\model_selection\\_search.py:765: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  self.best_estimator_.fit(X, y, **fit_params)\n"
      ]
@@ -1490,7 +1472,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'n_estimators': 200, 'min_samples_split': 10, 'min_samples_leaf': 3, 'max_features': 3, 'max_depth': 90, 'bootstrap': True}\n"
+      "{'n_estimators': 500, 'min_samples_split': 8, 'min_samples_leaf': 3, 'max_features': 3, 'max_depth': 90, 'bootstrap': True}\n"
      ]
     }
    ],
@@ -1516,17 +1498,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RF Mean Absolute Error: 0.3963860275532322\n",
-      "RF Mean Squared Error: 0.3727328274528868\n",
-      "RF R2: 0.7959015192293087\n",
-      "RF Root Mean Squared Error: 0.6105184906723847\n"
+      "RF Mean Absolute Error: 0.3459329647433616\n",
+      "RF Mean Squared Error: 0.25679961713959376\n",
+      "RF R2: 0.8476785735621174\n",
+      "RF Root Mean Squared Error: 0.5067540006152825\n"
      ]
     }
    ],
@@ -1541,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1562,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -1600,32 +1582,28 @@
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 12 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done   8 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=-1)]: Done 488 tasks      | elapsed:    0.6s\n",
-      "[Parallel(n_jobs=-1)]: Done 3048 tasks      | elapsed:    3.4s\n",
-      "[Parallel(n_jobs=-1)]: Done 6632 tasks      | elapsed:    7.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 11240 tasks      | elapsed:   12.8s\n",
-      "[Parallel(n_jobs=-1)]: Done 16872 tasks      | elapsed:   21.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 23528 tasks      | elapsed:   31.5s\n",
-      "[Parallel(n_jobs=-1)]: Done 31208 tasks      | elapsed:   42.8s\n",
-      "[Parallel(n_jobs=-1)]: Done 39912 tasks      | elapsed:   55.5s\n",
-      "[Parallel(n_jobs=-1)]: Done 49640 tasks      | elapsed:  1.2min\n",
-      "[Parallel(n_jobs=-1)]: Done 60392 tasks      | elapsed:  1.4min\n",
-      "[Parallel(n_jobs=-1)]: Done 72168 tasks      | elapsed:  1.7min\n",
-      "[Parallel(n_jobs=-1)]: Done 84968 tasks      | elapsed:  2.0min\n",
-      "[Parallel(n_jobs=-1)]: Done 98792 tasks      | elapsed:  2.4min\n"
+      "[Parallel(n_jobs=-1)]: Done 5352 tasks      | elapsed:    5.4s\n",
+      "[Parallel(n_jobs=-1)]: Done 12520 tasks      | elapsed:   12.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 21736 tasks      | elapsed:   25.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 33000 tasks      | elapsed:   39.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 46312 tasks      | elapsed:   57.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 61672 tasks      | elapsed:  1.3min\n",
+      "[Parallel(n_jobs=-1)]: Done 79080 tasks      | elapsed:  1.7min\n",
+      "[Parallel(n_jobs=-1)]: Done 98536 tasks      | elapsed:  2.1min\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5690167388753651\n"
+      "0.5498222935608146\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done 102400 out of 102400 | elapsed:  2.4min finished\n"
+      "[Parallel(n_jobs=-1)]: Done 102400 out of 102400 | elapsed:  2.2min finished\n"
      ]
     }
    ],
@@ -1642,17 +1620,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 0.6386334207130219\n",
-      "MSE: 0.754882665818637\n",
-      "R2: 0.5866465363231586\n",
-      "RMSE: 0.8688398389914203\n"
+      "MAE: 0.6820248122912645\n",
+      "MSE: 0.8988922066291318\n",
+      "R2: 0.46681952001035665\n",
+      "RMSE: 0.9480992599032718\n"
      ]
     }
    ],
@@ -1665,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
